force-app/main/default/objects/BenchmarkSignalDefinition__mdt/BenchmarkSignalDefinition__mdt.object-meta.xml
<CustomObject>
    <description>Defines Benchmark Threshold Signals for the Account Sales Motion Insights</description>
    <label>Benchmark Signal Definition</label>
    <pluralLabel>Benchmark Signal Definitions</pluralLabel>
</CustomObject>