force-app/main/default/objects/BenchmarkSignalDefinition__mdt/fields/DisplayColour__c.field-meta.xml
<CustomField>
    <fullName>DisplayColour__c</fullName>
    <description>The colour used when showing the threshold progress bar</description>
    <inlineHelpText>The colour used when showing the threshold progress bar</inlineHelpText>
    <label>DisplayColour</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>