force-app/main/default/objects/BenchmarkSignalDefinition__mdt/fields/MaxThreshold__c.field-meta.xml
<CustomField>
    <fullName>MaxThreshold__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>The Maximum Threshold value to satisfy the threshold</description>
    <inlineHelpText>The Maximum Threshold value to satisfy the threshold</inlineHelpText>
    <label>MaxThreshold</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>