force-app/main/default/objects/BenchmarkSignalDefinition__mdt/fields/MinThreshold__c.field-meta.xml
<CustomField>
    <fullName>MinThreshold__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>The Minimum Value to meet the Benchmark Signal</description>
    <inlineHelpText>The Minimum Value to meet the Benchmark Signal</inlineHelpText>
    <label>MinThreshold</label>
    <precision>5</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>