force-app/main/default/objects/BenchmarkSignalDefinition__mdt/validationRules/MaxThresholdGEMinThreshold.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxThresholdGEMinThreshold</fullName>
    <active>true</active>
    <description>Maximum Threshold must be &gt;= the Minimum Threshold</description>
    <errorConditionFormula>MaxThreshold__c &lt; MinThreshold__c</errorConditionFormula>
    <errorMessage>Maximum Threshold must be &gt;= the Minimum Threshold</errorMessage>
</ValidationRule>