force-app/main/default/objects/BenchmarkSignalDefinition__mdt/validationRules/MinThresholdGE0.validationRule-meta.xml
<ValidationRule>
    <fullName>MinThresholdGE0</fullName>
    <active>true</active>
    <description>The Minimum Threshold must be &gt;= 0.0</description>
    <errorConditionFormula>MinThreshold__c &lt; 0.0</errorConditionFormula>
    <errorMessage>The Minimum Threshold must be &gt;= 0.0</errorMessage>
</ValidationRule>